DevAccount/src/objects/staffdob__c.object
<CustomObject>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>staff</label>
        <referenceTo>staff__c</referenceTo>
        <relationshipLabel>staffsdob (staff)</relationshipLabel>
        <relationshipName>staffsdob1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>age__c</fullName>
        <label>age</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dob__c</fullName>
        <label>dob</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>staff1__c</fullName>
        <label>staff1</label>
        <referenceTo>staff1__c</referenceTo>
        <relationshipLabel>staffsdob</relationshipLabel>
        <relationshipName>staffsdob</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>staff</label>
        <referenceTo>staff__c</referenceTo>
        <relationshipLabel>staffsdob</relationshipLabel>
        <relationshipName>staffsdob</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>staffdob</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>staffdob Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>staffsdob</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>